--- a/.github/workflows/ping_supabase.yml
+++ b/.github/workflows/ping_supabase.yml
@@ -1,6 +1,7 @@
 name: Ping Supabase Edge Function
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 9 * * 1,4' # Every Monday and Thursday at 9:00 AM UTC
 
