--- a/.github/workflows/ping_supabase.yml
+++ b/.github/workflows/ping_supabase.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   ping:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Ping Edge Function
         env:
